--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -249,6 +249,41 @@ html, body {
   }
  }
 
+
+.glyphicon-chevron-right {
+  background-image: url("../svg/calendar-arrow.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 6px;
+  height: 30px;
+  background-size: 7px;
+  &:before {
+    content: '';
+  }
+}
+.glyphicon-chevron-left {
+  background-image: url("../svg/calendar-arrow.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 6px;
+  height: 30px;
+  background-size: 7px;
+  @include transform(rotate(180deg));
+  &:before {
+    content: '';
+  }
+}
+
+.daterangepicker.ltr .calendar.left .calendar-table {
+  padding-left: 2px;
+  padding-right: 6px;
+  padding-bottom: 10px;
+}
+
+.daterangepicker.ltr .calendar.left {
+  margin-right: 4px;
+}
+
 .transform-arrow {
   transform: rotate(180deg);
   -webkit-transform: rotate(180deg);
