--- a/themes/default/layouts/dinamic.htm
+++ b/themes/default/layouts/dinamic.htm
@@ -22,7 +22,7 @@ code = "que-hacer"
         if($this['lang']==''){
             $this['lang']='es';
         }
-        
+
         if($this->page->apiBag){
             if(isset($this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"])){
                 $this['metaImg'] = $this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"];
@@ -60,14 +60,12 @@ code = "que-hacer"
     <link rel="stylesheet" href="{{url('/')}}/plugins/rainlab/pages/assets/css/style-home.css"/>
     <link rel="stylesheet" href="{{url('/')}}/plugins/rainlab/pages/assets/css/style-search.css"/>
     <link rel="stylesheet" href="{{url('/')}}/plugins/rainlab/pages/assets/css/style.css"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/svg/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/svg/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./assets/svg/favicons/favicon-16x16.png">
-
-    <link rel="manifest" href="{{url('/')}}/plugins/rainlab/pages/assets/svg/favicons/manifest.json">
-    <link rel="mask-icon" href="{{url('/')}}/plugins/rainlab/pages/assets/svg/favicons/safari-pinned-tab.svg" color="#383838">
-
-    <meta name="theme-color" content="#ffffff">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ 'assets/img/favicons/apple-touch-icon.png'|theme }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ 'assets/img/favicons/favicon-32x32.png'|theme }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ 'assets/img/favicons/favicon-16x16.png'|theme }}">
+    <link rel="manifest" href="{{ 'assets/img/favicons//manifest.json'|theme }}">
+    <link rel="mask-icon" href="{{ 'assets/img/favicons//safari-pinned-tab.svg'|theme }}" color="#175DA3">
+    <meta name="theme-color" content="#175DA3">
 
     <style>
       .calendar.right {
