--- a/themes/default/partials/events.htm
+++ b/themes/default/partials/events.htm
@@ -18,7 +18,11 @@
 {% if events|length > 0 %}
 
     <div class="search-title-container">
+      {% if events|length > 1 %}
       <p class="title-search"> {{ 'Hemos encontrado'|_ }} {{events|length}} {{ 'eventos que se adaptan ti'|_ }}</p>
+      {% else %}
+       <p class="title-search"> {{ 'Hemos encontrado'|_ }} {{events|length}} {{ 'evento que se adaptan ti'|_ }}</p>
+      {% endif %}
     </div>
 
    <div class="all-events-container">
