--- a/themes/default/partials/events.htm
+++ b/themes/default/partials/events.htm
@@ -55,4 +55,9 @@
   	</div>
 
 
+{% else %}
+<div class="search-title-container">
+     <p class="title-search"> {{ 'No hemos encontrado resultados que se adapten a tus criterios.'|_ }}</p>
+</div>
+
 {% endif %}
