--- a/themes/default/layouts/defaultnc.htm
+++ b/themes/default/layouts/defaultnc.htm
@@ -1,4 +1,4 @@
-description = "Playa Layout"
+description = "Default Layout"
 
 [staticPage]
 useContent = 1
@@ -28,18 +28,13 @@ code = "que-hacer"
         if($this['lang']==''){
             $this['lang']='es';
         }
+                $this['urlPage'] = $this->page->url;
 
-        $this['beaches'] = $this->staticApp->beachList();
-
-        $this['urlPage'] = $this->page->url;
-
-        if($this->page->apiBag){
+        if($this->page->apiBag)
             if(isset($this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"])){
                 $this['metaImg'] = $this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"];
             }
         }
-
-    }
 
 ?>
 
@@ -70,12 +65,6 @@ code = "que-hacer"
     {% partial 'site/header' %}
 
     {% component 'staticPage' %}
-
-    <div id='prtlBeaches' class="all-events">
-        <div class="all-events-container">
-        {% partial "beaches" %}
-        </div>
-    </div>
 
     {% partial 'site/footer' %}
 
