--- a/themes/default/partials/events.htm
+++ b/themes/default/partials/events.htm
@@ -46,7 +46,7 @@
                 </div>
               </div>
               <div class="button-container">
-                <a class="see-event" href="{{url('/')}}/{{lang}}{{event.viewBag.url}}">{{'Ver evento'|_}} <img ssrc="{{preurl}}/storage/app/media/uploaded-files/templates/link-icon.svg"></a>
+                <a class="see-event" href="{{url('/')}}/{{lang}}{{event.viewBag.url}}">{{'Ver evento'|_}} <img src="{{preurl}}/storage/app/media/uploaded-files/templates/link-icon.svg"></a>
               </div>
             </div>
           </div>
