--- a/themes/default/layouts/dinamic.htm
+++ b/themes/default/layouts/dinamic.htm
@@ -85,6 +85,15 @@ code = "que-hacer"
         {% page %}
     </section>
 
+    <script>
+        var address = "{{this.page.title}}";
+    </script>
+
+    <div id="map" style="height: 800px">
+        <br>
+    </div>
+
+
       {% partial 'site/footer' %}
 
     <!-- SCRIPTS -->
@@ -94,7 +103,7 @@ code = "que-hacer"
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.5/js/select2.full.min.js"></script>
-<script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/iziModal/js/iziModal.js"></script>
+    <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/iziModal/js/iziModal.js"></script>
 
 
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/style.js"></script>
@@ -102,6 +111,9 @@ code = "que-hacer"
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/script-select2.js"></script>
 
     <script type="text/javascript" src="http://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+
+    <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/map.js"></script>
+    <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDDmzy36wKzsJB_flAMdhaLttNVU1SDqpg&callback=initMap' async defer></script>
 
     <script type="text/javascript" src="http://cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/range-datapicker.js"></script>
