--- a/themes/default/layouts/default.htm
+++ b/themes/default/layouts/default.htm
@@ -78,13 +78,24 @@ code = "que-hacer"
         </div>
     </div>
 
+     <script>
+        var address = "{{this.page.title}}";
+    </script>
+
+    <div id="map" style="height: 800px">
+        <br>
+    </div>
+
     {% partial 'site/footer' %}
 
     <!-- SCRIPTS -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.5/js/select2.full.min.js"></script>
+    <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/map.js"></script>
+    <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDDmzy36wKzsJB_flAMdhaLttNVU1SDqpg&callback=initMap' async defer></script>
+
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/script-select2.js"></script>
-<script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/iziModal/js/iziModal.js"></script>
+    <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/iziModal/js/iziModal.js"></script>
 
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/style.js"></script>
 
