--- a/themes/default/layouts/default.htm
+++ b/themes/default/layouts/default.htm
@@ -78,7 +78,7 @@ code = "que-hacer"
         </div>
     </div>
 
-    {% if $this->paga->subtemplate = "municipios" %}
+    {% if this->page->subtemplate = "municipios" %}
     <script>
         var address = "{{this.page.title}}";
     </script>
