--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2179,3 +2179,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
   background: $blue !important;
   border-color: $blue !important;
 }
+
+.menus-items {
+  min-height: auto !important;
+}
