--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2183,3 +2183,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 .menus-items {
   min-height: auto !important;
 }
+
+.fr-tooltip {
+  background: $blue !important;
+}
