--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5520,3 +5520,6 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 
 .menus-items {
   min-height: auto !important; }
+
+.fr-tooltip {
+  background: #175DA3 !important; }
