--- a/themes/default/layouts/municipio.htm
+++ b/themes/default/layouts/municipio.htm
@@ -16,6 +16,12 @@ code = "mi-estancia"
 [staticMenu staticMenu4]
 code = "que-hacer"
 
+[staticMenu staticMenu5]
+code = "pie"
+
+[staticMenu staticMenu6]
+code = "redes-sociales"
+
 [staticApp]
 
 ==
