--- a/themes/default/partials/site/footer.htm
+++ b/themes/default/partials/site/footer.htm
@@ -3,11 +3,13 @@
       <div class="left-container">
         <img class="mini-logo" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/mini-logo.svg" alt="logo cádiz">
         <div class="links-container">
-          <a href="#">Sobre nosotros</a>
-          <a href="#">Sala de prensa</a>
-          <a href="#">Publicaciones</a>
-          <a href="#">¿Necesitas ayuda?</a>
-          <a href="#">Aviso legal</a>
+         
+
+          {% for item in staticMenu5.menuItems %}
+            {% set tt = '.'~item.title %}
+            <a href="{{ item.url }}">{{ tt|_ }}</a>
+          {% endfor %}
+
         </div>
       </div>
       <div class="copy-social-container">
