--- a/themes/default/partials/site/headerexp.htm
+++ b/themes/default/partials/site/headerexp.htm
@@ -23,7 +23,7 @@
   <!-- Botón para enviar la experiencia -->
   <div class="send-info">
     <div class="button-send-info">
-      <a data-izimodal-open="#modal-exp">{{'Envía la experiencia a tu móvil'|_}}</a>
+      <a data-izimodal-open="#modal-exp" data-izimodal-transitionin="fadeInDown">{{'Envía la experiencia a tu móvil'|_}}</a>
     </div>
   </div>
 </div>
@@ -48,6 +48,6 @@
       <img src="{{url('/')}}/plugins/rainlab/pages/assets/svg/sent-icon.svg">
       <h3>{{'Tu experiencia ya ha llegado a tu correo'|_}}</h3>
       <p>{{'Te hemos enviado la experiencia a tu correo, disfruta de Cádiz como nunca antes.'|_}}</p>
-      <a href="#" data-izimodal-close="#modal-success" data-izimodal-open="#modal-exp">{{'¿No recibes tu experiencia?'|_}}</a>
+      <a href="#" data-izimodal-close="#modal-success" data-izimodal-open="#modal-exp" data-izimodal-transitionin="fadeInDown">{{'¿No recibes tu experiencia?'|_}}</a>
     </div>
 </div>
