--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -44,6 +44,9 @@
 .navigation {
   display: none; }
 
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 30px #cecece inset !important; }
+
 @media (max-width: 725px) {
   .slidemenu {
     display: none; }
