--- a/plugins/rainlab/pages/assets/css/style-comarcas.css
+++ b/plugins/rainlab/pages/assets/css/style-comarcas.css
@@ -169,8 +169,7 @@
   z-index: 10px;
   position: relative;
   background-color: white;
-  z-index: 50;
-  margin-bottom: 100px; }
+  z-index: 50; }
   .main-section-comarcas #container-rutas {
     margin-top: -227px; }
 
