--- a/plugins/rainlab/pages/widgets/pagelist/partials/_treebranch.htm
+++ b/plugins/rainlab/pages/widgets/pagelist/partials/_treebranch.htm
@@ -19,7 +19,7 @@
 
         <li           
             class="<?= $pageObj->subpages ? 'has-subitems' : null ?>" 
-            data-status="<?= $groupStatus || !$pageObj->subpages ? 'expanded' : 'collapsed' ?>"
+            data-status="collapsed"
             data-group-id="<?= e($fileName) ?>"
             data-item-path="<?= e($fileName) ?>"
             <?php if ($searchMode): ?>data-no-drag-mode<?php endif ?>
