--- a/plugins/rainlab/pages/widgets/pagelist/partials/_treebranch.htm
+++ b/plugins/rainlab/pages/widgets/pagelist/partials/_treebranch.htm
@@ -20,7 +20,7 @@
         <li           
             class="<?= $pageObj->subpages ? 'has-subitems' : null ?>" 
             data-status="collapsed"
-            data-group-id="<?= e($fileName) ?>"
+            data-status="<?= $groupStatus || !$pageObj->subpages ? 'expanded' : 'collapsed' ?>"
             data-item-path="<?= e($fileName) ?>"
             <?php if ($searchMode): ?>data-no-drag-mode<?php endif ?>
             data-id="<?= e($dataId) ?>"          
