--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -45,7 +45,7 @@
   display: none; }
 
 input:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0 30px #cecece inset !important; }
+  -webkit-box-shadow: 0 0 0 30px #CECECE inset !important; }
 
 @media (max-width: 725px) {
   .slidemenu {
