--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -55,7 +55,7 @@
   }
 
   input:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0 30px rgba(206,206,206, 1) inset !important;
+    -webkit-box-shadow: 0 0 0 30px #CECECE inset !important;
 }
 
       // variables
