--- a/themes/default/layouts/evento.htm
+++ b/themes/default/layouts/evento.htm
@@ -72,7 +72,7 @@ code = "redes-sociales"
     <meta name="theme-color" content="#175DA3">
 </head>
 
-    {% partial 'site/header' %}
+    {% partial 'site/headerevent' %}
 
     {% component 'staticPage' %}
 
