--- a/themes/default/partials/site/headerruta.htm
+++ b/themes/default/partials/site/headerruta.htm
@@ -20,12 +20,13 @@
 
 <!-- FEATURES -->
 <div id="out-features" class="event-features">
-
-  <div class="feature-ruta"><img src="{{preurl}}/storage/app/media/uploaded-files/templates/{{str_slug(ruta.category)}}.svg" class="fr-fil fr-dib">
-
-    <p class="feature-txt">{{ruta.category}}</p>
+  <div class="feature"><img src="{{preurl}}/storage/app/media/uploaded-files/templates/calendar-event.svg" class="fr-fil fr-dib">
+    <p class="feature-txt">2 días</p>
   </div>
-  <div class="feature-ruta"><img src="{{preurl}}/storage/app/media/uploaded-files/templates/location.svg" class="fr-fil fr-dib">
+  <div class="feature"><img src="{{preurl}}/storage/app/media/uploaded-files/templates/cultura.svg" class="fr-fil fr-dib">
+    <p class="feature-txt">Cultura</p>
+  </div>
+  <div class="feature"><img src="{{preurl}}/storage/app/media/uploaded-files/templates/location.svg" class="fr-fil fr-dib">
 
-    <p class="feature-txt">{{ruta.location}}</p><a class="feature-txt-mapa" href="{{ruta.locationgoogle}}" target="_blank">Ver mapa</a></div>
+    <p class="feature-txt">Alcalá de los Gazules</p><a class="feature-txt-mapa" href="{{ruta.locationgoogle}}" target="_blank">Ver mapa</a></div>
 </div>
