--- a/themes/default/partials/site/headerruta.htm
+++ b/themes/default/partials/site/headerruta.htm
@@ -23,8 +23,8 @@
   <div class="feature"><img src="{{preurl}}/storage/app/media/uploaded-files/templates/calendar-event.svg" class="fr-fil fr-dib">
     <p class="feature-txt">2 días</p>
   </div>
-  <div class="feature"><img src="{{preurl}}/storage/app/media/uploaded-files/templates/cultura.svg" class="fr-fil fr-dib">
-    <p class="feature-txt">Cultura</p>
+  <div class="feature"><img src="{{preurl}}/storage/app/media/uploaded-files/templates/natu-exp.svg" class="fr-fil fr-dib">
+    <p class="feature-txt">Naturaleza</p>
   </div>
   <div class="feature"><img src="{{preurl}}/storage/app/media/uploaded-files/templates/location.svg" class="fr-fil fr-dib">
 
