--- a/themes/default/partials/allevents.htm
+++ b/themes/default/partials/allevents.htm
@@ -55,7 +55,7 @@
 <div class="all-events">
 	<div class="title-container">
 		<p class="title">TODOS LOS EVENTOS </p>
-			<img class="separator" src="assets/svg/big-yellow-separator.svg">
+			<img class="separator" src="{{preurl}}/storage/app/media/uploaded-files/templates/big-yellow-separator.svg">
 	</div>
 	<div class="all-events-container">
 		{% for event in events %}
