--- a/themes/default/partials/allrutas.htm
+++ b/themes/default/partials/allrutas.htm
@@ -18,7 +18,7 @@
       <p class="title">MÁS POPULARES <br> EN CÁDIZ </p>
         <img class="separator" src="{{preurl}}/storage/app/media/uploaded-files/templates/big-yellow-separator.svg">
     	</div>
-   	<div id="container-rutas" class="main-events-container">
+<div id="container-rutas" class="main-events-container">
   	{% for ruta in rutas %}
   	    <!--  MÁS POPULARES -->
           <div class="event">
@@ -46,3 +46,37 @@
   	{% endfor %}
   	</div>
 {% endif %}
+
+<div class="all-events">
+	<div class="title-container">
+		<p class="title">TODOS LAS RUTAS </p>
+			<img class="separator" src="{{preurl}}/storage/app/media/uploaded-files/templates/big-yellow-separator.svg">
+	</div>
+	<div class="all-events-container">
+		{% for ruta in rutas %}
+  	    <!--  MÁS POPULARES -->
+          <div class="event">
+            <div class="overlay-img"></div>
+            <img class="rec-img" src="{{ruta.viewBag.cover}}">
+            <div class="txt-container">
+              <p class="name">{{ruta.viewBag.title}}</p>
+              <img class="separator" src="{{preurl}}/storage/app/media/uploaded-files/templates/small-yellow-separator.svg">
+              <div class="icons">
+                <div class="icon-pair">
+                  <img src="{{preurl}}/storage/app/media/uploaded-files/templates/{{str_slug(ruta.viewBag.category)}}.svg">
+                  <p class="icon-txt">{{ruta.viewBag.category}}</p>
+                </div>
+                <div class="icon-pair">
+                  <img src="{{preurl}}/storage/app/media/uploaded-files/templates/loc-events.svg">
+                  <p class="icon-txt">{{ruta.location}}</p>
+                </div>
+              </div>
+              <div class="button-container">
+                <a class="see-event" href="{{url('/')}}/{{lang}}{{ruta.viewBag.url}}">{{'Ver ruta'|_}} <img src="{{preurl}}/storage/app/media/uploaded-files/templates/link-icon.svg"></a>
+              </div>
+            </div>
+          </div>
+
+  	{% endfor %}
+	</div>
+</div>
