--- a/themes/default/partials/allrutas.htm
+++ b/themes/default/partials/allrutas.htm
@@ -18,6 +18,7 @@
       <p class="title">MÁS POPULARES <br> EN CÁDIZ </p>
         <img class="separator" src="{{preurl}}/storage/app/media/uploaded-files/templates/big-yellow-separator.svg">
     	</div>
+			<!-- AQUÍ LAS SEIS PRIMERAS RUTAS -->
 <div id="container-rutas" class="main-events-container">
   	{% for ruta in rutas %}
   	    <!--  MÁS POPULARES -->
@@ -47,6 +48,7 @@
   	</div>
 {% endif %}
 
+<!-- AQUÍ LAS DEMÁS -->
 <div class="all-events">
 	<div class="title-container">
 		<p class="title">TODOS LAS RUTAS </p>
