--- a/plugins/rainlab/pages/assets/css/style-totalEvents.css
+++ b/plugins/rainlab/pages/assets/css/style-totalEvents.css
@@ -533,3 +533,8 @@ form input[type="submit"]:hover, form input[type="submit"]:focus, form input[typ
   text-align: center;
   z-index: 100;
   margin-bottom: 50px; }
+
+#todos-eventos .icons {
+  flex-wrap: nowrap !important; }
+  #todos-eventos .icons .icon-pair {
+    justify-content: flex-start; }
