--- a/themes/default/partials/allevents.htm
+++ b/themes/default/partials/allevents.htm
@@ -52,7 +52,7 @@
 {% endif %}
 
 <!-- Y DENTRO DE ESTE LOS DEMÁS -->
-<div class="all-events">
+<div id="todos-eventos" class="all-events">
 	<div class="title-container">
 		<p class="title">TODOS LOS EVENTOS </p>
 			<img class="separator" src="{{preurl}}/storage/app/media/uploaded-files/templates/big-yellow-separator.svg">
