--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -76,7 +76,7 @@
     transform: $value;
     }
 
-.section-txt, .section-txt-village p {
+.section-txt, .section-txt-village, .section-txt-comarca p {
   color: #9B9B9B;
   font-size: 18px;
   line-height: 33px;
