--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2098,7 +2098,7 @@ html, body {
     margin-bottom: 28px !important; }
   .small-features .small-feature:last-child {
     margin-bottom: 0px !important; }
-  .more-popular, .all-events, .main-section-comarcas {
+  .more-popular, .main-section-comarcas {
     margin-top: 90px !important; }
   .more-popular .title-search, .all-events .title-search, .all-exps .title-search, .main-section-comarcas .title-search {
     text-align: center;
