--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -53,6 +53,11 @@ input:-webkit-autofill {
   line-height: 33px;
   margin-bottom: 30px; }
 
+.all-exps .all-events-container .event p {
+  font-size: 18px;
+  line-height: 20px;
+  color: white; }
+
 @media (max-width: 725px) {
   .slidemenu {
     display: none; }
