--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -83,6 +83,14 @@
   margin-bottom: 30px;
 }
 
+.all-exps .all-events-container .event {
+  p {
+    font-size: 18px;
+    line-height: 20px;
+    color: white;
+  }
+}
+
   @media (max-width: 725px) {
     .slidemenu {
       display: none;
