--- a/plugins/rainlab/pages/assets/scss/style-totalEvents.scss
+++ b/plugins/rainlab/pages/assets/scss/style-totalEvents.scss
@@ -285,7 +285,7 @@ form, .inputs-container {
             display: flex;
             flex-direction: row;
             align-items: center;
-            justify-content: center; }
+            justify-content: flex-start !important; }
             .more-popular .main-events-container .event .txt-container .icons .icon-pair p {
               margin-bottom: 0px;
               color: white;
