--- a/plugins/rainlab/pages/assets/css/style-totalEvents.css
+++ b/plugins/rainlab/pages/assets/css/style-totalEvents.css
@@ -319,6 +319,8 @@ form input[type="submit"]:hover, form input[type="submit"]:focus, form input[typ
   font-size: 16px;
   line-height: 22px;
   margin-left: 11px; }
+  .more-popular .main-events-container .event .txt-container .icons .icon-pair p::first-letter {
+    text-transform: capitalize; }
 
 .more-popular .main-events-container .event .txt-container .icons .icon-pair:first-child {
   margin-right: 30px; }
