--- a/plugins/rainlab/pages/assets/scss/style-totalEvents.scss
+++ b/plugins/rainlab/pages/assets/scss/style-totalEvents.scss
@@ -291,7 +291,11 @@ form, .inputs-container {
               color: white;
               font-size: 16px;
               line-height: 22px;
-              margin-left: 11px; }
+              margin-left: 11px;
+              &::first-letter {
+                text-transform: capitalize;
+              }
+             }
             .more-popular .main-events-container .event .txt-container .icons .icon-pair:first-child {
               margin-right: 30px; }
         .more-popular .main-events-container .event .txt-container .button-container {
