--- a/plugins/rainlab/pages/assets/css/style-totalEvents.css
+++ b/plugins/rainlab/pages/assets/css/style-totalEvents.css
@@ -479,7 +479,8 @@ form input[type="submit"]:hover, form input[type="submit"]:focus, form input[typ
   color: white;
   font-size: 16px;
   line-height: 22px;
-  margin-left: 11px; }
+  margin-left: 11px;
+  text-transform: capitalize; }
 
 .all-events .all-events-container .event .txt-container .icons .icon-pair:first-child {
   margin-right: 30px; }
