--- a/plugins/rainlab/pages/assets/scss/style-totalEvents.scss
+++ b/plugins/rainlab/pages/assets/scss/style-totalEvents.scss
@@ -432,7 +432,8 @@ form, .inputs-container {
               color: white;
               font-size: 16px;
               line-height: 22px;
-              margin-left: 11px; }
+              margin-left: 11px;
+              text-transform: capitalize;}
             .all-events .all-events-container .event .txt-container .icons .icon-pair:first-child {
               margin-right: 30px; }
         .all-events .all-events-container .event .txt-container .button-container {
