--- a/plugins/rainlab/pages/assets/scss/style-totalEvents.scss
+++ b/plugins/rainlab/pages/assets/scss/style-totalEvents.scss
@@ -433,7 +433,8 @@ form, .inputs-container {
               font-size: 16px;
               line-height: 22px;
               margin-left: 11px;
-              text-transform: capitalize;}
+              text-transform: capitalize;
+            }
             .all-events .all-events-container .event .txt-container .icons .icon-pair:first-child {
               margin-right: 30px; }
         .all-events .all-events-container .event .txt-container .button-container {
