--- a/plugins/rainlab/pages/assets/css/style-comarcas.css
+++ b/plugins/rainlab/pages/assets/css/style-comarcas.css
@@ -305,7 +305,8 @@
   color: white;
   font-size: 16px;
   line-height: 22px;
-  margin-left: 11px; }
+  margin-left: 11px;
+  text-transform: capitalize; }
 
 .main-section-comarcas .main-events-container .event .txt-container .icons .icon-pair:first-child {
   margin-right: 30px; }
@@ -578,7 +579,8 @@
               color: white;
               font-size: 16px;
               line-height: 22px;
-              margin-left: 11px; }
+              margin-left: 11px;
+              text-transform: capitalize; }
             .all-events .all-events-container .event .txt-container .icons .icon-pair:first-child {
               margin-right: 30px; }
         .all-events .all-events-container .event .txt-container .button-container {
