--- a/plugins/rainlab/pages/assets/scss/style-village.scss
+++ b/plugins/rainlab/pages/assets/scss/style-village.scss
@@ -609,6 +609,7 @@ transform: $value;
               line-height: 22px;
               margin-left: 11px;
               font-family: 'AvenirNext-DemiBold';
+              text-transform: capitalize;
             }
             img {
               width: 23px;
