--- a/plugins/rainlab/pages/assets/css/style-comarcas.css
+++ b/plugins/rainlab/pages/assets/css/style-comarcas.css
@@ -570,7 +570,8 @@
             display: flex;
             flex-direction: row;
             align-items: center;
-            justify-content: center; }
+            justify-content: center;
+            width: auto !important; }
             .all-events .all-events-container .event .txt-container .icons .icon-pair img {
               width: 23px;
               height: auto; }
