--- a/plugins/rainlab/pages/assets/scss/style-comarcas.scss
+++ b/plugins/rainlab/pages/assets/scss/style-comarcas.scss
@@ -601,6 +601,7 @@
             flex-direction: row;
             align-items: center;
             justify-content: center;
+            width: auto !important;
             img {
               width: 23px;
               height: auto;
