--- a/themes/default/partials/publications.htm
+++ b/themes/default/partials/publications.htm
@@ -24,7 +24,7 @@
       <p class="languages-publi"><span id="languages-title">{{'IDIOMAS DISPONIBLES:'|_ }}</span> {{publication.viewBag.idiomas}}</p>
       <div class="links-container">
         <a class="see-link" href="{{publication.viewBag.urlExternaVideo}}">{{'Ver'|_}} {{publication.viewBag.type|_}} <img src="{{preurl}}/storage/app/media/uploaded-files/templates/yellow-arrow2.svg" alt=""> </a>
-        <a class="download-link" href="#">{{'Descargar'|_}} {{publication.viewBag.urlExternaZip|_}} <img src="{{preurl}}/storage/app/media/uploaded-files/templates/yellow-arrow2.svg" alt=""> </a>
+        <a class="download-link" href="{{publication.viewBag.urlExternaZip}}">{{'Descargar'|_}} {{publication.viewBag.type|_}} <img src="{{preurl}}/storage/app/media/uploaded-files/templates/yellow-arrow2.svg" alt=""> </a>
       </div>
     </div>
 
