--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2695,9 +2695,12 @@ html, body {
     padding-top: 60px;
     padding-bottom: 60px; }
   .featured-element .txt-container {
-    position: relative !important;
-    left: 0px !important;
-    top: 0px !important;
+    left: 50% !important;
+    top: 50% !important;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     margin: 178px auto;
     width: 80% !important;
     text-align: center; }
