--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2921,11 +2921,15 @@ html, body {
       padding-bottom: 60px; }
   .featured-element .txt-container {
     left: 50% !important;
-    top: 50% !important;
-    @include transform(translate(-50%, -50%)); 
+    @include transform(translate(-50%, -50%));
     margin: 178px auto;
     width: 80% !important;
     text-align: center; }
+    .featured-element {
+      .img-destacada {
+        mask-image: none !important;
+      }
+    }
     .featured-element .txt-container .title {
       font-size: 64px !important;
       line-height: 64px !important; }
