--- a/themes/default/layouts/prensa.htm
+++ b/themes/default/layouts/prensa.htm
@@ -35,7 +35,7 @@ code = "redes-sociales"
             $this['lang']='es';
         }
 
-        $this['news'] = $this->staticApp->newList();
+        //$this['news'] = $this->staticApp->newList();
 
         $this['urlPage'] = $this->page->url;
 
