--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2340,7 +2340,8 @@ html, body {
     text-align: center; }
     .featured-element .txt-container .title {
       font-size: 33px !important;
-      line-height: 33px !important; }
+      line-height: 33px !important;
+      text-align: left;}
       .featured-element {
         .img-destacada {
           mask-image: none !important;
@@ -2349,9 +2350,9 @@ html, body {
       }
     .featured-element .txt-container .desc {
       width: 80% !important;
-      margin: 0px auto 20px auto;
       line-height: 28px !important;
-      font-size: 20px !important; } }
+      font-size: 20px !important;
+      text-align: left;} }
 
 @media (max-width: 1100px) {
   .section-txt, .section-txt-comarca {
@@ -2938,10 +2939,14 @@ html, body {
     }
     .featured-element .txt-container .title {
       font-size: 64px !important;
-      line-height: 64px !important; }
+      line-height: 64px !important;
+      text-align: left;
+    }
     .featured-element .txt-container .desc {
       width: 80% !important;
-      margin: 0 auto; }
+      margin: 0 auto;
+      text-align: left;
+    }
 
       .language-container {
         width: auto !important;
