--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2159,8 +2159,7 @@ html, body {
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     margin: 178px auto;
-    width: 80% !important;
-    text-align: center; }
+    width: 80% !important; }
     .featured-element .txt-container .events-link {
       text-align: left; }
   .featured-element .txt-container .title {
@@ -2709,8 +2708,7 @@ html, body {
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     margin: 178px auto;
-    width: 80% !important;
-    text-align: center; }
+    width: 80% !important; }
     .featured-element .txt-container .events-link {
       text-align: left; }
   .featured-element .img-destacada {
