--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2776,8 +2776,7 @@ html, body {
     .section-txt .txt-container .desc, .section-txt-village .txt-container .desc {
       font-size: 18px !important;
       width: 80%;
-      margin: 0 auto;
-      text-align: center !important; }
+      margin: 0 auto; }
     .section-txt .txt-container .municipios, .section-txt-village .txt-container .municipios {
       flex-direction: column;
       align-items: center !important; }
