--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2767,9 +2767,7 @@ html, body {
     .section-txt .txt-container .title, .section-txt-village .txt-container .title {
       font-size: 30px !important;
       line-height: 36px !important;
-      width: 86%;
-      margin: 0px auto 20px auto;
-      text-align: center !important; }
+      width: 86%; }
     .section-txt .txt-container .desc, .section-txt-village .txt-container .desc {
       font-size: 18px !important;
       width: 80%;
@@ -2782,9 +2780,7 @@ html, body {
   .section-txt-comarca .title {
     font-size: 30px !important;
     line-height: 36px !important;
-    width: 86%;
-    margin: 0px auto 20px auto;
-    text-align: center !important; }
+    width: 86%; }
   .page-cultura {
     width: 100% !important; }
 
