--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -1965,6 +1965,8 @@ html, body {
 @media (max-width: 600px) {
   .con-encanto {
     font-size: 100px !important; }
+  .somos-txt-container p {
+    width: 100% !important; }
   .all-exps .search-title-container, .all-events .search-title-container {
     top: -65px !important; }
   .all-exps .search-title-container .title-search, .all-events .search-title-container .title-search {
