--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2145,6 +2145,9 @@ html, body {
   .con-encanto {
     font-size: 100px !important;
   }
+  .somos-txt-container p {
+    width: 100% !important;
+  }
   .all-exps .search-title-container, .all-events .search-title-container {
     top: -65px !important; }
     .all-exps .search-title-container .title-search, .all-events .search-title-container .title-search {
