--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -58,6 +58,9 @@ input:-webkit-autofill {
   line-height: 20px;
   color: white; }
 
+.section-txt img, .section-txt-village img, .section-txt-comarca img {
+  max-width: 100%; }
+
 @media (max-width: 725px) {
   .slidemenu {
     display: none; }
