--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -59,7 +59,8 @@ input:-webkit-autofill {
   color: white; }
 
 .section-txt img, .section-txt-village img, .section-txt-comarca img {
-  max-width: 100%; }
+  max-width: 100%;
+  height: auto !important; }
 
 @media (max-width: 725px) {
   .slidemenu {
