--- a/themes/default/layouts/reportaje.htm
+++ b/themes/default/layouts/reportaje.htm
@@ -35,7 +35,7 @@ code = "redes-sociales"
             $this['lang']='es';
         }
 
-        $this['reports'] = $this->staticApp->reportsList();
+        $this['reports'] = $this->staticApp->reportList();
 
         $this['urlPage'] = $this->page->url;
 
